Mudanças de design

--- a/Projeto_MVC/Views/Home/Privacy.cshtml
+++ b/Projeto_MVC/Views/Home/Privacy.cshtml
@@ -1,54 +1,36 @@
-﻿@{
-    ViewData["Title"] = "Membros";
-}
-<div>
-    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-body-secondary">
+﻿<div>
+    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-body-secondary intro-card fade-in">
         <div class="col p-4 d-flex flex-column position-static">
             <h3 class="mb-0">Quem está por trás do projeto?</h3>
-            <br/>
-            <p class="card-text mb-auto justify">O Projeto Fi Group Finance é uma iniciativa transformadora, desenvolvida com o talento e a dedicação dos estagiários do programa Speeds: Vitor, Henrique e Bruno. O objetivo do projeto é criar uma solução moderna e automatizada para o cálculo de imposto de renda, simplificando esse processo complexo e garantindo praticidade aos usuários. Por meio de tecnologias avançadas e um design intuitivo, o sistema permite realizar cálculos rápidos e precisos com base nas informações fornecidas, promovendo eficiência e confiabilidade. Sob a liderança criativa e colaborativa de Vitor, Henrique e Bruno, o Fi Group Finance tem como missão transformar a maneira como as pessoas lidam com suas obrigações fiscais, oferecendo uma experiência simplificada e acessível para todos.</p>
+            <br />
+            <p class="card-text mb-auto justify">O Projeto Fi Group Finance é uma iniciativa transformadora, desenvolvida com o talento e a dedicação dos estagiários do programa Speeds: Vitor, Henrique e Bruno. O objetivo do projeto é criar uma solução moderna e automatizada para o cálculo de imposto de renda, simplificando esse processo complexo e garantindo praticidade aos usuários. Por meio de tecnologias avançadas e um design intuitivo, o sistema permite realizar cálculos rápidos e precisos com base nas informações fornecidas, promovendo eficiência e confiabilidade. Sob a liderança criativa e colaborativa de Vitor, Henrique e Bruno, o Fi Group Finance tem como missão transformar a maneira como as pessoas lidam com suas obrigações fiscais, oferecendo uma experiência simplificada e acessível para todos</p>
         </div>
         <div class="col-auto d-none d-lg-block">
-            <img class="bd-img" width="400" height="300" src="https://sopacultural.com/wp-content/uploads/2023/11/fi_group_1.jpg">
+            <img class="bd-img" width="500" height="400" src="https://sopacultural.com/wp-content/uploads/2023/11/fi_group_1.jpg">
         </div>
     </div>
 </div>
-<br/>
+<br />
 <div class="row" style="justify-content: center">
-    <div class="col-lg-3 card" style="text-align: center">
+    <div class="col-lg-3 card member-card fade-in" style="text-align: center">
         <div style="text-align:center">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" style="margin-bottom:5px" src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1672980045555?e=1747872000&v=beta&t=NQreyfZSCLCdWn0OcTLWGbk_by-9VikHY1iv-iyIHLA" onclick="location.href='https://www.linkedin.com/in/henriquecostadsantos/'">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1672980045555?e=1747872000&v=beta&t=NQreyfZSCLCdWn0OcTLWGbk_by-9VikHY1iv-iyIHLA">
         </div>
         <h2 class="fw-normal">Henrique Costa</h2>
         <p>Programador Full-Stack, Estagiário Speed</p>
-        <div style="text-align:center">
-            <button style="border:none; background:none; padding:0; margin-bottom:20px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/henriquecostadsantos/'">
-                <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
-            </button>
-        </div>
     </div>
-    <div class="col-lg-3 card" style="text-align: center">
+    <div class="col-lg-3 card member-card fade-in" style="text-align: center">
         <div style="text-align:center">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" style="margin-bottom:5px" src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1616261942396?e=1747872000&v=beta&t=pYVpZBgFksn0IRtvAplcfm5QW6P0LwIZa7RHLvhSbjA" onclick="location.href='https://www.linkedin.com/in/vitor-gomes-5477aa209/'">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1616261942396?e=1747872000&v=beta&t=pYVpZBgFksn0IRtvAplcfm5QW6P0LwIZa7RHLvhSbjA">
         </div>
         <h2 class="fw-normal">Vitor Gomes</h2>
         <p>Programador Full-Stack, Estagiário Speed</p>
-        <div style="text-align:center">
-            <button style="border:none; background:none; padding:0; margin-bottom:20px; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/vitor-gomes-5477aa209/'">
-                <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
-            </button>
-        </div>
     </div>
-    <div class="col-lg-3 card" style="text-align: center">
+    <div class="col-lg-3 card member-card fade-in" style="text-align: center">
         <div style="text-align:center">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" style="margin-bottom:5px" src="https://media.licdn.com/dms/image/v2/D4D03AQE624Vkm6RdQg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1710466574771?e=1747872000&v=beta&t=ObId-9wEceVf0PHPgbCKGqPY2d8hqiCgzfiR9d13v_g" onclick="location.href='https://www.linkedin.com/in/bruno-carraro-77529a1ba/'">
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQE624Vkm6RdQg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1710466574771?e=1747872000&v=beta&t=ObId-9wEceVf0PHPgbCKGqPY2d8hqiCgzfiR9d13v_g">
         </div>
         <h2 class="fw-normal">Bruno Carraro</h2>
         <p>Programador Back-End, Estagiário Speed</p>
-        <div style="text-align:center">
-            <button style="border:none; background:none; padding:0; cursor:pointer; margin-bottom:20px" onclick="location.href='https://www.linkedin.com/in/bruno-carraro-77529a1ba/'">
-                <img src="https://cdn-icons-png.flaticon.com/512/145/145807.png" width="40" height="40" alt="">
-            </button>
-        </div>
     </div>
 </div>
