--- a/Projeto_MVC/Views/Home/Edit.cshtml
+++ b/Projeto_MVC/Views/Home/Edit.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Edit";
 }
 
-<div style="text-align: center;">
-    <img class="mb-4" src="https://static.vagas.com.br/portais-de-carreira/images/headers/original/fi-group-logo-com-a-escrita-em-azul.png?1653657031" alt="" width="120" height="57">
-</div>
 <div style="display: flex; justify-content: center; align-items: center;">
     <div style="width: 700px; background-color: #f5f5f5; border: 1px solid #ddd; border-radius: 10px; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+        div style="text-align: center; margin-left: 3.5%">
+        <img class="mb-4" src="https://static.vagas.com.br/portais-de-carreira/images/headers/original/fi-group-logo-com-a-escrita-em-azul.png?1653657031" alt="" width="120" height="57">
+    </div>
         <form asp-action="Update" method="post">
             <input class="form-control" type="text" name="fullName" placeholder="Nome Completo" aria-label="default input example">
             <br />
