alteração botão edit e criação link nas imagens privacy

--- a/Projeto_MVC/Views/Home/Edit.cshtml
+++ b/Projeto_MVC/Views/Home/Edit.cshtml
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div style="text-align:center">
-                <button class="btn btn-primary rounded-pill px-3" type="submit">Salvar</button>
+                <button class="btn btn-primary rounded-pill px-3" type="submit" asp-controller="Home" asp-action="Profile">Salvar</button>
             </div>
         </form>
     </div>
