--- a/Projeto_MVC/Views/Home/Privacy.cshtml
+++ b/Projeto_MVC/Views/Home/Privacy.cshtml
@@ -14,21 +14,28 @@
 <div class="row" style="justify-content: center">
     <div class="col-lg-3 card member-card fade-in" style="text-align: center">
         <div style="text-align:center">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1672980045555?e=1747872000&v=beta&t=NQreyfZSCLCdWn0OcTLWGbk_by-9VikHY1iv-iyIHLA">
+            <button style="border:none; background:none; padding:0; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/henriquecostadsantos'">
+                <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQGc8C66HR_tEQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1672980045555?e=1747872000&v=beta&t=NQreyfZSCLCdWn0OcTLWGbk_by-9VikHY1iv-iyIHLA">
+            </button>
         </div>
         <h2 class="fw-normal">Henrique Costa</h2>
         <p>Programador Full-Stack, Estagiário Speed</p>
     </div>
     <div class="col-lg-3 card member-card fade-in" style="text-align: center">
         <div style="text-align:center">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1616261942396?e=1747872000&v=beta&t=pYVpZBgFksn0IRtvAplcfm5QW6P0LwIZa7RHLvhSbjA">
+            <button style="border:none; background:none; padding:0; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/vitor-gomes-5477aa209/'">
+                <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/C4E03AQHWHBkH4EqAkg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1616261942396?e=1747872000&v=beta&t=pYVpZBgFksn0IRtvAplcfm5QW6P0LwIZa7RHLvhSbjA">
+            </button>
         </div>
         <h2 class="fw-normal">Vitor Gomes</h2>
         <p>Programador Full-Stack, Estagiário Speed</p>
     </div>
     <div class="col-lg-3 card member-card fade-in" style="text-align: center">
         <div style="text-align:center">
-            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQE624Vkm6RdQg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1710466574771?e=1747872000&v=beta&t=ObId-9wEceVf0PHPgbCKGqPY2d8hqiCgzfiR9d13v_g">
+            <button style="border:none; background:none; padding:0; cursor:pointer;" onclick="location.href='https://www.linkedin.com/in/bruno-carraro-77529a1ba/'">
+                <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://media.licdn.com/dms/image/v2/D4D03AQE624Vkm6RdQg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1710466574771?e=1747872000&v=beta&t=ObId-9wEceVf0PHPgbCKGqPY2d8hqiCgzfiR9d13v_g">
+            </button>
+            
         </div>
         <h2 class="fw-normal">Bruno Carraro</h2>
         <p>Programador Back-End, Estagiário Speed</p>
