--- a/Projeto_MVC/Views/Home/Index.cshtml
+++ b/Projeto_MVC/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 
             <div class="checkbox mb-3">
                 <label>
-                    <input type="checkbox" value="remember-me"> Lembre de mim
+                    <input type="checkbox" name="rememberMe" value="true"> Lembre de mim
                 </label>
             </div>
             <button class="btn btn-primary rounded-pill px-3" type="submit">Entrar</button>
