alterações no design front end

--- a/Projeto_MVC/Views/Home/Services.cshtml
+++ b/Projeto_MVC/Views/Home/Services.cshtml
@@ -9,14 +9,59 @@
             <h1 class="fade-in display-5 fw-bold lh-1 mb-3" style="color: white">Seja muito bem vindo, @ViewBag.FullName</h1>
             <p class="fade-in lead" style="color: white;">No momento estamos adicionando funcionalidades novas veja a que foi criada inicialmente</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <button type="button" class="btn btn-primary btn-custom rounded-pill px-3 mt-2" onclick="location.href='/Home/IncomeTaxCalculation'">
-                    <strong>Calculo de IR</strong>
-                </button>
-                <button type="submit" class="btn btn-secondary btn-custom rounded-pill px-3 mt-2" onclick="location.href='/Home/Profile'">
-                    <strong>Perfil</strong>
-                </button>
-
             </div>
         </div>
     </div>
+</div>
+<div>
+<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Diapositivo 1" aria-current="true"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Diapositivo 2" class=""></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Diapositivo 3" class=""></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <svg class="bd-placeholder-img" width="200px" height="400px" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="none"></rect></svg>
+
+            <div class="container">
+                <div class="carousel-caption text-start">
+                    <h1><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><strong>Calculo de Imposto de Renda</strong></font></font></h1>
+                        <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Imagine nunca mais se preocupar com os cálculos do imposto de renda. Com nossa página, você terá uma solução prática, rápida e confiável ao seu alcance! Insira suas informações financeiras, clique em "Calcular" e deixe o trabalho pesado para nós. Em segundos, você saberá exatamente quanto precisa pagar ou o valor que poderá receber de volta, tudo explicado de forma clara e fácil de entender.</font></font></p>
+                        <p><a class="btn btn-primary btn-custom rounded-pill px-3 mt-2" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" onclick="location.href='/Home/IncomeTaxCalculation'">Realizar calculo</font></font></a></p>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <svg class="bd-placeholder-img" width="200px" height="400px" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="none"></rect></svg>
+
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><strong>Simulador de impostos para MEI, Simples Nacional e Lucro Presumido</strong></font></font></h1>
+                        <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Com nosso simulador de impostos para MEI, Simples Nacional e Lucro Presumido, você terá tudo o que precisa para simplificar a gestão tributária do seu negócio. Desenvolvido para ser intuitivo e eficiente, o simulador ajuda você a calcular rapidamente os valores dos impostos com base no regime escolhido, tudo em um único lugar.</font></font></p>
+                        <p><a class="btn btn-primary btn-custom rounded-pill px-3 mt-2" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Simule agorra</font></font></a></p>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <svg class="bd-placeholder-img" width="200px" height="400px" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="none"></rect></svg>
+
+            <div class="container">
+                <div class="carousel-caption text-end">
+                    <h1><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Trabalhando nisso</font></font></h1>
+                    <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">descrição da funcionalidade</font></font></p>
+                    <p><a class="btn btn-lg btn-primary" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Navegue pela galeria</font></font></a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">o anterior</font></font></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">o próximo</font></font></span>
+    </button>
+</div>
 </div>
