--- a/Projeto_MVC/Views/Home/Services.cshtml
+++ b/Projeto_MVC/Views/Home/Services.cshtml
@@ -28,7 +28,7 @@
                 <div class="carousel-caption text-start">
                     <h1><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><strong>Calculo de Imposto de Renda</strong></font></font></h1>
                         <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Imagine nunca mais se preocupar com os cálculos do imposto de renda. Com nossa página, você terá uma solução prática, rápida e confiável ao seu alcance! Insira suas informações financeiras, clique em "Calcular" e deixe o trabalho pesado para nós. Em segundos, você saberá exatamente quanto precisa pagar ou o valor que poderá receber de volta, tudo explicado de forma clara e fácil de entender.</font></font></p>
-                        <p><a class="btn btn-primary btn-custom rounded-pill px-3 mt-2" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" onclick="location.href='/Home/IncomeTaxCalculation'">Realizar calculo</font></font></a></p>
+                        <p><a class="btn btn-primary btn-custom rounded-pill px-3 mt-2" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" onclick="location.href='/Home/IncomeTaxCalculation'"> <strong>Realizar calculo</strong></font></font></a></p>
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
                 <div class="carousel-caption">
                     <h1><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><strong>Simulador de impostos para MEI, Simples Nacional e Lucro Presumido</strong></font></font></h1>
                         <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Com nosso simulador de impostos para MEI, Simples Nacional e Lucro Presumido, você terá tudo o que precisa para simplificar a gestão tributária do seu negócio. Desenvolvido para ser intuitivo e eficiente, o simulador ajuda você a calcular rapidamente os valores dos impostos com base no regime escolhido, tudo em um único lugar.</font></font></p>
-                        <p><a class="btn btn-primary btn-custom rounded-pill px-3 mt-2" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Simule agorra</font></font></a></p>
+                        <p><a class="btn btn-primary btn-custom rounded-pill px-3 mt-2" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> <strong>Simule agora</strong></font></font></a></p>
                 </div>
             </div>
         </div>
