alteraçõs na cor dos botões

--- a/Projeto_MVC/Views/Home/Services.cshtml
+++ b/Projeto_MVC/Views/Home/Services.cshtml
@@ -6,7 +6,7 @@
                  alt="Temas Bootstrap" width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
-            <h1 class="fade-in display-5 fw-bold lh-1 mb-3" style="color: white">Seja muito bem vindo, @ViewBag.FullName</h1>
+            <h1 class="fade-in display-5 fw-bold lh-1 mb-3" style="color: white">Seja muito bem vindo @ViewBag.FullName</h1>
             <p class="fade-in lead" style="color: white;">No momento estamos adicionando funcionalidades novas veja a que foi criada inicialmente</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
             </div>
