--- a/Projeto_MVC/Views/Shared/_Layout.cshtml
+++ b/Projeto_MVC/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Services">
-                                    <svg class="return" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 48 48">
+                                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 48 48" class="icons">
                                         <path d="M39.5,43h-9c-1.381,0-2.5-1.119-2.5-2.5v-9c0-1.105-0.895-2-2-2h-4c-1.105,0-2,0.895-2,2v9c0,1.381-1.119,2.5-2.5,2.5h-9	C7.119,43,6,41.881,6,40.5V21.413c0-2.299,1.054-4.471,2.859-5.893L23.071,4.321c0.545-0.428,1.313-0.428,1.857,0L39.142,15.52	C40.947,16.942,42,19.113,42,21.411V40.5C42,41.881,40.881,43,39.5,43z"></path>
                                     </svg>
                                 </a>
@@ -36,7 +36,7 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">
-                                    <svg class="return" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" height="30" width="30" version="1.1" id="Layer_1" viewBox="0 0 472.615 472.615" xml:space="preserve">
+                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="icons" height="30" width="30" version="1.1" id="Layer_1" viewBox="0 0 472.615 472.615" xml:space="preserve">
     <g>
                                     <g>
                                     <circle cx="236.308" cy="142.868" r="70.203" />
@@ -78,7 +78,7 @@
                     @if (Context.Request.Path != "/Home/Index" && ViewBag.MostrarBotao != null && (bool)ViewBag.MostrarBotao)
                     {
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Profile">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-fill return" viewBox="0 0 16 16">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 16 16" class="icons">
                                     <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6" />
                                 </svg>
                             </a>
